fix(wizard): apply dark mode styles to options

--- a/app/react/components/BoxSelector/BoxSelectorItem.css
+++ b/app/react/components/BoxSelector/BoxSelectorItem.css
@@ -88,6 +88,7 @@
 .box-selector-item.limited.business label,
 .box-selector-item.limited.business input[type='radio']:checked + label {
   @apply border-warning-7 bg-warning-1 text-black;
+  @apply th-dark:bg-warning-3;
 }
 
 .boxselector_img_container {
